style.css
@import url('https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;400&display=swap');

* {
  padding: 0px;
  margin: 0px;
  box-sizing: border-box;
  line-height: 1.5em;
  font-family: monospace;
}

a, a * {
  text-decoration: none;
}

:visited {
  color: grey;
  text-decoration: none;
}


.link {
  text-decoration: none;
}

.link:hover {
  box-shadow: 0 0 10px 5px #117;
  border-radius: 10px;
}

body {
  background-color: #003;
  padding-bottom: 40px;
}

#navbar {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0px;
  height: 100px;
  width: 100%;
  background-color: #112;
  align-items: center;
  text-align: center;
  border: solid 2px #001;
}

#navbar a {
  width: 33.3%;
}

#navmain {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  height: 50px;
  background-color: #001;
}

.navlink {
  color: lightgrey;
  font-size: 1.4em;
  border: none;
  transition: background-color 0.25s ease;
  padding: 20px 0
}

.navlink:hover {
  box-shadow: 0 0 10px 5x inset grey;
  background-color: rgb(28, 28, 153);
}

#profiles {
  background-color: #223;
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  height: 50px;
}

#welcome-section {
  padding: 20px 5px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: 100vh;
  background-color: #003;
}

#welcome-section a {
  color: cyan;
}

.title {
  text-align: center;
  padding: 0 20px;
  color: white;
  font-size: 2em;
}

.subtitle {
  text-align: center;
  color: lightgrey;
  font-size: 1.25em;
  max-width: 1200px;
  padding: 20px 40px;
}

.name {
  color: lightgrey;
  text-align: center;
  margin: 0px;
  padding: 0px;
}

#projects::before {
  display: block;
  content: " ";
  height: 80px;
  visibility: hidden;
  pointer-events: none;
}

#projects {
  display: flex;
  margin: 10px 0px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #003;
}


#projects header {
  background-color: rgba(0, 0, 0, .50);
  display: flex;
  margin: 5px 0;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  padding: 10px 5px;
  border-top: 2px solid grey;
  border-bottom: 2px solid grey;
}

.course-title {
  color: lightgrey;
  text-align: center;
  padding: 5px;
  font-size: 1.75em;
}

.course-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.course-projects {
  display: flex;
  flex-direction: column;
}

.project-tile {
  margin: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #001;
  padding: 5px 15px 10px 15px;
  overflow: hidden;
  border-radius: 10px;
  box-shadow: 0px 0px 10px 0px rgb(28, 28, 153);
}

.project-tile>a {
  width: 100%;
  height: 100%;
}

.project-title {
  display: flex;
  width: 100%;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 1.5em;
  font-weight: bold;
  color: white;
  border-radius: 5px 5px 0 0;
  margin: 5px 5px;
}

.project-tile:hover {
  box-shadow: 0px 0px 12px 2px lightgrey;
  transition: all;
  transition-duration: 0.25s;
  transition-timing-function: ease-out;
}

#about {
  position: relative;
  color: lightgrey;
  background-color: #001;
  width: 90%;
  margin: 70px auto 10px auto;
  padding: 25px;
  border: solid 2px;
  border-radius: 5px;
  font-size: 1.25em;
}

#about a {
  color: cyan
}

#resumelink {
  display: block;
  margin: 0px auto 10px auto;
  text-align: center;
  font-size: 1.5em;
  color: cyan;
}

#resumelink:hover {
  color: white;
  box-shadow: 0px 0px 10px 0px grey;
}

.proj-thumb {
  width: 75vw;
  height: auto;
  margin: 0 auto;
}

.proj-thumb-cont {
  overflow: hidden;
  display: flex;
}

.txtart {
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
  font-size: 5em;
  color: blue;
  text-align: center;
}

.link-row {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.link-row>a {
  margin: 5px 15px;
  font-size: 1.25em;
  text-align: center;
}

@media only screen and (min-width: 700px) {
  #navbar {
    position: fixed;
    flex-direction: row;
    height: 70px;
  }

  #navmain, #profiles {
    height: 70px;
  }

  #welcome-section {
    margin-top: 70px;
  }

  #projects::before {
    display: block;
    content: " ";
    height: 70px;
    visibility: hidden;
    pointer-events: none;
  }

  .proj-thumb {
    width: 15vw;
    height: auto;
    margin: 0 auto;
  }

  .course-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .course-projects {
    flex-direction: row;
    justify-content: space-around;
    flex-wrap: wrap;
  }

  .link-row {
    flex-direction: row;
    justify-content: center;
    width: 100%;
  }

  #resumelink {
    position: absolute;
    right: 40px;
    top: 15px;
    text-align: right;
    font-size: 1.5em;
  }
}

